# Portfolio

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  Procfile  README.md  Untitled Diagram.drawio  manage.py  pyproject.toml  requirements.txt  runtime.txt
.github/workflows/: django.yml
Portfolio/: heroku_dev_settings.py  heroku_settings.py  local_settings.py  replit_settings.py  settings.py  urls.py
RossDevs/: admin.py  apps.py  forms.py  middleware.py  models.py  views.py
RossDevs/migrations/: 0001_initial.py  0002_auto_20191108_1007.py  0002_bio.py  0002_curriculumvitae_skills.py  0003_auto_20191105_0015.py  0003_remove_contactcard_expired.py  0004_auto_20191106_1737.py  0004_contactcard_expired.py  0005_auto_20191112_0115.py  0006_svg.py  0007_project_uid.py  0008_auto_20200915_0529.py  0009_auto_20210321_0029.py  0010_auto_20210321_0032.py  0011_auto_20210321_0055.py  0012_auto_20220206_1936.py  0013_auto_20220209_0200.py
RossDevs/templates/: 404.html  base.html  footer.html  footer_ico_link.html  form_base.html  header.html  home.html  (+7 more)
acct-management/: apps.py  views.py
acct_management/: admin.py  apps.py  models.py  urls.py
acctmanagment/: apps.py  forms.py  urls.py  views.py
blog/: apps.py  urls.py  views.py
docs/: ERD.drawio  Privacy.md  Security.md  Untitled Diagram.drawio
main/: apps.py  sitemaps.py  urls.py  views.py
portfolio/: admin.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
seo/: apps.py  urls.py  views.py
templates/: base.html  curriculum_vitae.html  home.html  project.html  projects.html  resume.html
(+130 files in other folders)
